# Nimble-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  compile_commands.json  ninja_docs.sh  unix_build.sh  win_build.sh
docs/: Doxyfile.in
examples/: CMakeLists.txt
examples/camera/: CMakeLists.txt  main.cpp
examples/cubes/: CMakeLists.txt  main.cpp
examples/testing/: CMakeLists.txt  main.cpp
examples/testing/res/: Thumbs.db
examples/textures/: CMakeLists.txt  main.cpp
examples/triangle/: CMakeLists.txt  main.cpp
include/: NimbleHelpers.h  NimbleRenderer.h  callbacks.h  logger.h  shader.h  utils.h
shaders/: Fragment.glsl  Vertex.glsl
src/: NimbleHelpers.cpp  NimbleRenderer.cpp  callbacks.cpp  shader.cpp  utils.cpp
